--- a/cards/templates/cards/about.html
+++ b/cards/templates/cards/about.html
@@ -10,5 +10,8 @@
 
 <p>Проект интервального повторения - это проект,
     который помогает запоминать информацию с помощью интервального повторения.</p>
+<p>Пользователей в проекте: {{ users_count }}</p>
+<p>Карточек в проекте: {{ cards_count }}</p>
+<hr>
 </body>
 </html>
