Наблон main.html. Знакомство с циклами в шаблоне.

--- a/cards/templates/cards/about.html
+++ b/cards/templates/cards/about.html
@@ -12,6 +12,7 @@
     который помогает запоминать информацию с помощью интервального повторения.</p>
 <p>Пользователей в проекте: {{ users_count }}</p>
 <p>Карточек в проекте: {{ cards_count }}</p>
+    <p>Лично моих любимых карточек: {{ my_l_cards_count }}</p>
 <hr>
 </body>
 </html>
