--- a/cards/templates/cards/main.html
+++ b/cards/templates/cards/main.html
@@ -5,6 +5,15 @@
     <title>Первый шаблон</title>
 </head>
 <body>
+<nav>
+    <ul>
+    {% for title in menu %}
+        <li>
+            {{ title }}
+        </li>
+        {% endfor %}
+    </ul>
+</nav>
     <h1>Первый шаблон</h1>
     <p>Содержимое главной страницы</p>
 </body>
