--- a/cards/templates/cards/main.html
+++ b/cards/templates/cards/main.html
@@ -3,18 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <title>Первый шаблон</title>
+    <style>
+        .green{
+            color: green;
+        }
+    </style>
 </head>
 <body>
 <nav>
     <ul>
     {% for title in menu %}
-        <li>
+        <li {% if forloop.first %}
+            class="green"
+            {% endif %}>
             {{ title }}
         </li>
-        {% endfor %}
+        {% if not forloop.last %}<hr>{% endif %}
+    {% endfor %}
     </ul>
 </nav>
-    <h1>Первый шаблон</h1>
-    <p>Содержимое главной страницы</p>
+    <h1>Главная страница</h1>
+    <p>Содержимое страницы</p>
 </body>
 </html>
