--- a/cards/templates/cards/main.html
+++ b/cards/templates/cards/main.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Первый шаблон</title>
     <style>
-        .green{
+        .green {
             color: green;
         }
     </style>
@@ -12,17 +12,21 @@
 <body>
 <nav>
     <ul>
-    {% for title in menu %}
-        <li {% if forloop.first %}
-            class="green"
-            {% endif %}>
-            {{ title }}
+        <!-- Цикл на синтаксисе шаблонизатора -->
+        <!-- Если элемент первый или последний ему будет дан класс green -->
+        {% for item in menu %}
+        <li {% if forloop.first %} class="green" {% endif %}>
+<!--            Хардкод урлов. Если маршрут изменится, то придется менять везде-->
+<!--            <a href="{{ item.url }}">{{ item.title }}</a>-->
+<!--           Урлы через имена. Урлы будут добываться из urls.py автоматически-->
+            <a href="{% url item.url_name %}">{{ item.title }}</a>
+
         </li>
-        {% if not forloop.last %}<hr>{% endif %}
+         {% if not forloop.last %}<hr>{% endif %}
     {% endfor %}
     </ul>
 </nav>
-    <h1>Главная страница</h1>
-    <p>Содержимое страницы</p>
+<h1>Главная страница</h1>
+<p>Содержимое страницы</p>
 </body>
 </html>
