--- a/templates/about.html
+++ b/templates/about.html
@@ -1,5 +1,9 @@
-<!--card/templates/card/about.html-->
+<!--root/templates/about.html-->
 {% extends "base.html" %}
+{% comment %}
+Шаблон about - расширяет базовый шаблон base.html
+Рассказывает о проекте интервального повторения
+{% endcomment %}
 {% block content %}
 <!--Шаблон about-->
 <h1>Проект интервального повторения</h1>
